// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable.TableHeader should have an active and ascending class if sorting by ASC 1`] = `
<Table
  prefix="bx"
  short={false}
  zebra={true}
>
  <table
    className="bx--data-table-v2 bx--data-table-v2--zebra"
  >
    <TableHead
      prefix="bx"
    >
      <thead>
        <TableRow
          prefix="bx"
        >
          <tr>
            <TableHeader
              isSortHeader={true}
              isSortable={false}
              onClick={[MockFunction]}
              prefix="bx"
              scope="col"
              sortDirection="ASC"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                Header
              </th>
            </TableHeader>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;

exports[`DataTable.TableHeader should have an active class if it is the sort header and the sort state is not NONE 1`] = `
<Table
  prefix="bx"
  short={false}
  zebra={true}
>
  <table
    className="bx--data-table-v2 bx--data-table-v2--zebra"
  >
    <TableHead
      prefix="bx"
    >
      <thead>
        <TableRow
          prefix="bx"
        >
          <tr>
            <TableHeader
              isSortHeader={true}
              isSortable={false}
              onClick={[MockFunction]}
              prefix="bx"
              scope="col"
              sortDirection="NONE"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                Header
              </th>
            </TableHeader>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;

exports[`DataTable.TableHeader should render 1`] = `
<Table
  prefix="bx"
  short={false}
  zebra={true}
>
  <table
    className="bx--data-table-v2 bx--data-table-v2--zebra"
  >
    <TableHead
      prefix="bx"
    >
      <thead>
        <TableRow
          prefix="bx"
        >
          <tr>
            <TableHeader
              isSortHeader={false}
              isSortable={false}
              onClick={[MockFunction]}
              prefix="bx"
              scope="col"
              sortDirection="NONE"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                Header
              </th>
            </TableHeader>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;

exports[`DataTable.TableHeader should render 2`] = `
<Table
  prefix="bx"
  short={false}
  zebra={true}
>
  <table
    className="bx--data-table-v2 bx--data-table-v2--zebra"
  >
    <TableHead
      prefix="bx"
    >
      <thead>
        <TableRow
          prefix="bx"
        >
          <tr>
            <TableHeader
              isSortHeader={true}
              isSortable={false}
              onClick={[MockFunction]}
              prefix="bx"
              scope="col"
              sortDirection="NONE"
              translateWithId={[Function]}
            >
              <th
                scope="col"
              >
                Header
              </th>
            </TableHeader>
          </tr>
        </TableRow>
      </thead>
    </TableHead>
  </table>
</Table>
`;
